--- a/passwordValidator.html
+++ b/passwordValidator.html
@@ -8,10 +8,10 @@
     <h1> Password Validator </h1>
     <form>
       Password 1:<br>
-      <input type="text" name="password1" id="password1"><br>
+      <input type="text" id="password1"><br>
       <br>
       Password 2:<br>
-      <input type="text" name="password2" id="password2"><br>
+      <input type="text" id="password2"><br>
       <br>
       <button type="button" onclick="validate()"> Validate </button>
     </form>
