Fix links in personalProfile.html Complete index.html and indexFormat.css Complete exercise 5

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
 		<title> Lab 03 </title>
+		<link href="indexFormat.css" rel="stylesheet" type="text/css"/>
 	</head>
-	
+
 	<body>
 		<h1> Josiah Gray </h1>
 		<h2> EECS 448 Lab 03 </h2>
