--- a/personalProfile.html
+++ b/personalProfile.html
@@ -13,13 +13,13 @@
     <br>
     <h2> Favorite websites: </h2>
     <a href="http://www.google.com"> Google </a><br>
-    <a href="http://www.swikipedia.org"> Wikipedia </a><br>
+    <a href="http://www.wikipedia.org"> Wikipedia </a><br>
 	<a href="http://www.youtube.com"> YouTube </a><br>
     <a href="http://www.lookingatsomething.com"> Look At Something </a><br>
     <a href="http://www.coldvoid.com"> Cold Void </a><br>
     <a href="http://www.thepersistenceofsadness.com"> The Persistance of Sadness </a><br>
     <a href="http://www.jellotime.com"> Jello Time </a><br>
-	
+
 	<br>
 	<h2> The Greatest Video Ever, of All Time: </h2>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/o0u4M6vppCI" frameborder="0" allowfullscreen></iframe>
